Tue Nov  2 01:20:09 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_invoke): nail down dyna_var node when Proc object
	  or continuation is created.  [ruby-dev:24671]

	* io.c (rb_io_s_popen): do not expand argv array.  [ruby-dev:24670]

Mon Nov  1 22:25:56 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb: changed xml-stylesheet's API of RSS Maker
	  like item's one.

	* lib/rss/xml-stylesheet.rb (RSS::XMLStyleSheet#guess_type): fixed
	  regular expression bug.

	* test/rss/test_maker_xml-stylesheet.rb: updated tests for
	  xml-stylesheet.

Mon Nov  1 13:59:28 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb (MANIFEST): do not use anymore, use extconf.rb instead.

	* ext/enumerator/extconf.rb, ext/fcntl/extconf.rb,
	  ext/stringio/extconf.rb: added.

	* MANIFEST, ext/**/MANIFEST: removed.

	* README.EXT, README.EXT.ja: remove MANIFEST stuff.

Mon Nov  1 11:52:18 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (pipe_open): avoid conflict of variable name. [ruby-dev:24662]

Mon Nov  1 11:46:19 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* process.c (rb_f_exec): should check whether prog is NULL.

Mon Nov  1 09:37:19 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker.rb: added entry point of RSS Maker.

Mon Nov  1 03:14:14 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_get_method_body): store ICLASS in the cache.
	  [ruby-core:03672]

	* eval.c (rb_provided): should return true for loading library
	  too for autoloading.  [ruby-core:03655]

Mon Nov  1 01:14:52 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_open): create copy of popen specifier.  [ruby-dev:24656]

	* string.c (rb_str_locktmp): lock string temporarily.

	* string.c (str_independent): add tmplock check.

	* io.c (io_write): lock output string temporarily.
	  [ruby-dev:24649]

	* io.c (io_write): use rb_str_locktmp().

	* io.c (read_all): ditto.

Sun Oct 31 23:37:00 2004  NARUSE, Yui  <naruse@ruby-lang.org>
